46.alpha
========

- Fix "Ctrl + C" copies image instead of metadata if text is selected
- Fix "g_object_weak_unref" warnings
- Fix changing image resets timeout for hiding controls if still visible
- Fix long file names can newly opened window larger than required for image
- Fix not always zooming into center when using overlay buttons on touchscreen
- Fix opening image in different folder ends fullscreen mode
- Fix scrollbars disappearing under certain conditions
- Add zooming via touchpad scrolling while Ctrl button is pressed
- Follow G_MESSAGES_DEBUG variable for logging
- In print preview, base 100% image scale on physical dimensions of SVGs if specified
- In print preview, fix wrong upper input limit in height
- In print preview, scale SVGs correctly
- More reliably zoom into image position below cursor
- Pre-select current image's folder in file-chooser dialog
- Remember image properties visibility state
- Use GdkSurface:scale instead of scale factor, in theory supporting fractional scaling
- Use glycin 1.0

45.3
====

- Fix horizontal scrollbar sometimes jumping to center while zooming in

45.2
====

- Fix order of images gets confused after deleting image
- Fix image is not shown when sucessfully reloaded after error
- Fix keyboard shortcuts shows the swipe gestures the wrong way round

45.1
=======

- Fix sandbox for image decoding not enabled by default
- Fix printing on different printer than selected
- Fix print dialog crashes on confirmation
- Fix print dialog needs second confirmation inside Flatpaks
- Fix SVGs sometimes not re-rendering for zoom level
- Fix animated image formats with variable frame length using only one length
- Fix rotation getting applied twice to HEIF images

45.0
=======

- Always ask which program to use for "Open With…"
- SVG: Force minimum tile size of 1000x1000
- SVG: Don't render first tiles with zoom=1
- Empty state: Use flat headerbar
- Fix non-native files with path cannot be deleted
- Update screenshots